# basic-pitch-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
basic_pitch_demo/: app.py  transcribe.py
notebooks/: scrapbook.ipynb
sound_fonts/: 8bit.sf2  meow.sf2  nokia_3220.sf2
