[tool.poetry]
name = "basic-pitch-demo"
version = "0.1.0"
description = ""
authors = ["Ming Cheuk <ming.cheuk@spark64.com>"]

[tool.poetry.dependencies]
python = "~3.8"
basic-pitch = "^0.0.1"
gradio = "^3.0.20"
pyFluidSynth = "^1.3.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
